Version 17     ???

--Fixed failure to fetch amulet image and potential crash caused by this 
  failure (thanks ..)

--Fixed to clear NON-AMULET tool tip from CREATE button after dropping an
  amulet (thanks ..)

--Added held time and penalty rate to protocol so that client can display a
  realtime update of held-amulet score decay.





Version 16     Live Server Fixes

--Added retry-based work-around for deadlock in keepGameAlive.

--Fixed to go back into transaction after pulling a player out of a joined game
  and into an amulet game.

--Player picking up a free-floating amulet now scores 200 points on it.

--Added tracking of last time each player scored points on each amulet.

--Fixed to prevent currently-holding amulet player from being in wrong ordered
  spot on leaderboard.

--Removed pending amulet games from OTHER GAMES list on waiting screen
  (thanks ..)




Version 16     2015-March-18

--Added support for temporary logins to existing accounts with account details
  not saved locally.

--REFRESH button is now hidden for 5 seconds after a refresh to prevent refresh
  spam.

--Added missing webProxy setting file, and added note to readme
  (thanks chequers).

--Game flow now skips unecessary BET 0 steps if one player is out of coins.

--Fixed auto-completion of expiration date fields on deposite page when
  mouse-clicking out of fields instead of tabbing out (thanks Patrick T).

--Server and client support for amulet-passing contests.

--Added a reload button to user pages in web admin view.




Version 15     Live Server Fixes

--Fixed revealed-square leak if opponent posts their revealed square before we
  get a chance to request the pre-reveal game state.  Also fixed bet leaks that
  could happen through similar bad timing (thanks several forum members).

--Increased grace period for move timeouts, and increased timeout for
  end_round.  The existing timeout for end_round could be crossed too easily